# hod

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  Justfile  NEXT_PACKAGES.md  PRD.md  README.md  TASKS.md  current-roots.txt  flake.nix  mkosi-wrapper.sh
docs/: README.md  agent-package-guide.md  bootc-image-workflow.md  bootstrap-pipeline.md  build-environment-and-metadata.md  closure-transfer.md  debugging-builds.md  evaluator-resolver-prd.md  ghostty.md  hermetic-bootstrap-tasks.md  hermetic-toolchain-plan.md  minimal-vm-workflow.md  podman-setup.md  profiles.md  recipe-compiler-design.md  recipe-compiler-guide.md  recipe-compiler-tasks.md  relocatable-binaries-guide.md  system-profiles.md  vm-testing-workflow.md
js/: package.json  tsconfig.json
launcher/: hod-launcher.c
mkosi/: mkosi.conf  mkosi.postinst
plans/: README.md  alpine-vm-validation.md  bindgen-infrastructure.md  bootc-image-builder.md  bootstrap-executor-options.md  bootstrap-roadmap.md  build-musl-from-source.md  copy-closure-design.md  cosmic-desktop-roadmap.md  cosmic-on-hod-vm.md  declarative-runtime-wrappers.md  desktop-next.md  end-user-runtime.md  etc-generation.md  fhs-via-store.md  flatpak-build-plan.md  future-tracks.md  gcc-stage2-bootstrap-plan.md  geany-wrapper-handoff.md  go-language-support.md  gtk-gui-roadmap.md  heartbeat-service-poc.md  hod-arch-os.md  hod-os-bootc.md  hod-system-architecture.md  hod-system-profile.md  merge-rpath-bootstrap-segment.md  migrate-to-hod-seed-root.md  minimal-hod-vm-roadmap.md  native-busybox-and-shellbuild-plan.md  nautilus-handoff.md  profiles.md  (+9 more)
(+890 files in other folders)
