[package]
name = "hod"
version = "0.1.0"
edition = "2021"
description = "A deterministic, content-addressed build system"

[dependencies]
blake3 = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
nix = { version = "0.30", features = ["sched", "mount", "signal", "process", "fs", "user"] }
rusqlite = { version = "0.32", features = ["bundled"] }
unshare = { git = "https://github.com/brioche-dev/unshare.git" }

goblin = { version = "0.10", default-features = false, features = ["elf32", "elf64", "endian_fd"] }
memchr = "2"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "gen-recipes"
path = "examples/src/main.rs"
